<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Find My Kid</string>
    <string name="about_title">Find My Kid</string>
    <string name="action_settings">Settings</string>
    <string name="about_main">Find My Kid is nu actief. Vraag de locatie op via een SMS bericht met de tekst:</string>
    
    <string name="about_sms">WY@?</string>
    <string name="about_main2">Je krijg een SMS terug met de actuele locatie.</string>
    <string name="permission_askSms">Toegang tot SMS is vereist</string>
    <string name="permission_location">Toegang tot de locatie is vereist</string>


    <integer name="google_play_services_version">10298000</integer>
    <integer name="about_title_size">20</integer>
    <integer name="about_main_size">16</integer>
    
</resources>
